# ArmProject

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buildApp.bat  flashBin.bat  stm32_toolchain.cmake
App/Inc/: main.h
App/src/: main.c
Driver/utils/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Driver/utils/Src/: stm32f4xx_it.c
Utilities/CPU/: cpu_utils.c  cpu_utils.h
linker/: stm32F429_ls.ld
startup/: stm32F429_startup.c
